# Spectacle

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
entity/src/entitied/: mod.rs  prelude.rs  template.rs  video_thumbnail.rs
entity/src/entities/: default_template.rs
src/: app.html  globalStyles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/entities/: authors.rs  authors_songs.rs  bible.rs  media_files.rs  metadata.rs  mod.rs  prelude.rs  song_books.rs  songs.rs  songs_topics.rs  template.rs  topics.rs
src-tauri/migration/src/: lib.rs  m20231101_184734_create_video_thumbnail_table.rs  m20231102_123234_create_template_table.rs  m20231126_112928_create_default_template_table.rs
src-tauri/src/: main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/commands/: media.rs  mod.rs  template.rs  view.rs
src-tauri/src/app/commands/scripture/: download.rs  mod.rs  queries.rs  select.rs
src-tauri/src/app/commands/songs/: download.rs  mod.rs  mutations.rs  queries.rs
src-tauri/src/app/config/: constants.rs  db.rs
src-tauri/src/app/models/: mod.rs  scripture.rs  slide.rs  songs.rs  template.rs
src-tauri/src/app/models/media/: media_type.rs  mod.rs
src-tauri/src/app/models/template/: mod.rs
src-tauri/src/app/state/: mod.rs
src-tauri/src/app/utils/: dirs.rs
src-tauri/src/common/: errors.rs  utils.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: media.rs
src/lib/: types.ts
src/lib/actions/: dnd.ts
src/routes/: +layout.svelte
(+154 files in other folders)
