[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ['.', "entity", "migration"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = [ "window-all"] }
dirs = "5.0.1"
dotenv = "0.15.0"
anyhow = "1.0.75"
actix-web = "4.4.0"
actix-files = "0.6.2"

[dependencies.sea-orm]
version = "0.12"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-json" ]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
